# encodable

./: Cargo.toml  README.md
examples/: example.rs
src/: deserializer.rs  error.rs  lib.rs  serializer.rs
